--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -25,6 +25,8 @@ permissions:
 jobs:
   build-docker:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.set_tags.outputs.TAGS }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -63,3 +65,14 @@ jobs:
           tags: ${{ steps.set_tags.outputs.TAGS }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  docker-scout:
+    needs: build-docker
+    if: always()
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: ./.github/workflows/docker-scout.yaml
+    with:
+      image_tag: ${{ needs.build-docker.outputs.image_tag || 'ghcr.io/fema-ffrd/hecstac:latest' }}
+    secrets: inherit
